Make dashboard circles clickable on mobile Fixes #1226.

--- a/src/nyc_trees/sass/partials/_home.scss
+++ b/src/nyc_trees/sass/partials/_home.scss
@@ -157,6 +157,7 @@ $hero-box-side-padding: 3rem;
 .progress-circles {
   margin-left: $grid-gutter-width/-2;
   margin-right: $grid-gutter-width/-2;
+  @include clearfix;
   @media (max-width: $screen-xs) {
     margin-left: -.4rem;
     margin-right: -.4rem;
